--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <p>Systems and product designer currently building design systems at <a class="link" href="https://gusto.com/" target="_blank" title="Gusto">Gusto</a>.</p>
     <div class="spacer-2"></div>
     <p>Other projects:</p>
-    <p><a class="link" href="https://derektorsani.com/chromeoh/chromeoh" target="_blank" title="Chromeoh">Chromeoh</a> - visual digital art created by translating sound into light and color.</p>
+    <p><a class="link" href="https://derektorsani.com/chromeoh" target="_blank" title="Chromeoh">Chromeoh</a> - visual digital art created by translating sound into light and color.</p>
     <p><a class="link" href="https://soundcolorproject.com/" target="_blank" title="Sound Color Project">Sound Color Project</a> - web experiment exploring the relationships between audible and visual spectrums using light, color, and texture.</p>
     <p><a class="link" href="https://halfdollar.org/" target="_blank" title="Halfdollar">Halfdollar</a> - spreadsheet budgeting template built for ease and collaboration.</p>
     <p><a class="link" href="https://cmbmn.com/dt" target="_blank" title="Call Me By My Name">Call Me By My Name</a> - profile page for people to proclaim their name pronunciation, personal pronouns, personal identities, topic interests, and cause support.</p>
