--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
     <div class="spacer-1"></div>
     <p>I'm thankful to have been able to speak about my work to many different people.</p>
     <div class="spacer-2"></div>
-    <p>Engagements:</p>
+    <p>Features:</p>
+    <p>Documentation Resource Highlight, Figma Schema, 2021</p>
+    <p>Inside Design Systems Panel Discussion, Design Systems Community, 2021</p>
     <p>Tools and Approaches for Design System Teams, Friends of Figma Lviv, 2021</p>
     <p>Sound Color Project, Sound Scene & Hirshhorn, 2020</p>
     <p>Designing Systems with Others, NOVA UX, 2019</p>
