--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
     <p>Connecting with people on <a class="link" href="https://superpeer.com/dt" target="_blank" title="Superpeer">Superpeer</a>, <a class="link" href="https://adplist.org/mentors/derek-torsani" target="_blank" title="ADP List">ADP List</a>, and <a class="link" href="https://www.outofofficehours.com/" target="_blank" title="Out of Office Hours">Out of Office Hours</a>.</p>
     <div class="spacer-8"></div>
 
-    <h5>Speaking —</h5>
+    <h5>Engagements —</h5>
     <div class="spacer-1"></div>
-    <p>I'm thankful to have been able to speak about my work to many different people.</p>
+    <p>I'm thankful to have been able to share my work to many different people.</p>
     <div class="spacer-2"></div>
     <p>Features:</p>
     <p>Documentation Resource Highlight, Figma Schema, 2021</p>
