--- a/index.html
+++ b/index.html
@@ -78,9 +78,8 @@
     <p>Systems and product designer currently building design systems at <a class="link" href="https://gusto.com/" target="_blank" title="Gusto">Gusto</a>.</p>
     <div class="spacer-2"></div>
     <p>Other projects:</p>
-    <p><a class="link" href="https://foundation.app/@chromeoh" target="_blank" title="Chromeoh">Chromeoh</a> - converting sound into visuals through spectrum translation and use of light and color.</p>
     <p><a class="link" href="https://soundcolorproject.com/" target="_blank" title="Sound Color Project">Sound Color Project</a> - web experiment exploring the relationships between audible and visual spectrums using light, color, and texture.</p>
-    <p><a class="link" href="https://halfdollar.org/" target="_blank" title="Halfdollar">Halfdollar</a> - spreadsheet budgeting template built for ease and collaboration.</p>
+    <p><a class="link" href="https://halfdollar.org/" target="_blank" title="Halfdollar">Halfdollar</a> - free, collaborative and customizable budgeting template built in Airtable.</p>
     <p><a class="link" href="https://cmbmn.com/dt" target="_blank" title="Call Me By My Name">Call Me By My Name</a> - profile page for people to proclaim their name pronunciation, personal pronouns, personal identities, topic interests, and cause support.</p>
     <p><a class="link" href="https://weiigh.com/" target="_blank" title="Weiigh">Weiigh</a> - tool to help make choices based on what’s important to you and how the factors in your decisions weigh against one another.</p>
     <div class="spacer-8"></div>
