--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="styles/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Inter:500,600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Inter:500,700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <title>Derek Torsani</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -22,7 +22,7 @@
 <body>
 
 <div>
-    <div class="ticker-wrap">
+    <!-- <div class="ticker-wrap">
         <div class="ticker">
           <a href="https://www.every.org/racial-justice" target="_blank" title="Donate to causes supporting racial justice" class="ticker__item"><span>✊</span>Anti-Racisim</a>
           <a href="https://www.every.org/racial-justice" target="_blank" title="Donate to causes supporting racial justice" class="ticker__item"><span>🖤</span>Black Lives Matter</a>
@@ -34,16 +34,16 @@
           <a href="https://www.every.org/environment" target="_blank" title="Donate to causes supporting environmental justice" class="ticker__item"><span>🌲</span>Environmental Justice</a>
           <a href="https://www.every.org/animals" target="_blank" title="Donate to causes supporting animal rights" class="ticker__item"><span>🐓</span>Animal Rights</a>
         </div>
-    </div>
+    </div> -->
 
     <img id="profile" src="images/favicon.png" alt="Photograph of a person with a large jacket on standing in front of a sky backdrop. It looks cold and feels windy."/>
 
     <div class="spacer-8"></div>
     <h1>Derek Torsani</h1>
-    <h2>— musician and designer living in Baltimore, Maryland.</h2>
+    <h2>— designer and musician in Baltimore, Maryland.</h2>
     <div class="spacer-8"></div>
 
-    <h5>Personal principles —</h5>
+    <h3>Personal principles —</h3>
     <div class="spacer-1"></div>
     <ul>
         <li>be kind</li>
@@ -56,65 +56,70 @@
 
     <p>"Let's change the way we eat, let's change the way we live, and let's change the way we treat each other."</p>
     <div class="spacer-1"></div>
-    <h5>— Tupac Shakur, 1992</h5>
+    <h4>— Tupac Shakur, 1992</h4>
     <div class="spacer-8"></div>
 
-    <h5>Music —</h5>
+    <h3>Design —</h3>
+    <div class="spacer-1"></div>
+    <p>Currently tending to design systems at <a class="link" href="https://plaid.com/" target="_blank" title="Plaid">Plaid</a>.</p>
+    <p>Previously designed systems at <a class="link-secondary" href="https://workbench.gusto.com/" target="_blank" title="Gusto">Gusto</a>, <a class="link-secondary" href="https://design.oracle.com/" target="_blank" title="Oracle">Oracle</a>, and <a class="link-secondary" href="https://medium.com/@dmtors/signals-b456ab01b387" target="_blank" title="Alarm.com">Alarm.com</a>.</p>
+    <div class="spacer-2"></div>
+    <h4>Projects:</h4>
+    <p><a class="link" href="https://soundcolorproject.com/" target="_blank" title="Sound Color Project">Sound Color Project</a> - audible to visual spectrum translation.</p>
+    <p><a class="link" href="https://halfdollar.org/" target="_blank" title="Halfdollar">Halfdollar</a> - collaborative and customizable budgeting.</p>
+    <p><a class="link" href="https://weiigh.com/" target="_blank" title="Weiigh">Weiigh</a> - calculated decision making.</p>
+    <!-- <p><a class="link" href="https://cmbmn.com/dt" target="_blank" title="Call Me By My Name">Call Me By My Name</a> - self-identifying profile pages.</p> -->
+    <div class="spacer-8"></div>
+
+    <h3>Music —</h3>
     <div class="spacer-1"></div>
     <p>Multi-instrumentalist, producer, and songwriter influenced by sounds from all over the world.</p>
     <div class="spacer-1"></div>
     <p><a class="link" href="https://open.spotify.com/artist/73mWdu0S5IfY7ReJ3V7JFv" target="_blank" title="Spotify">Spotify</a> / <a class="link" href="https://music.apple.com/us/artist/derek-torsani/1546729491" target="_blank" title="Apple Music">Apple Music</a> / <a class="link" href="https://listen.tidal.com/artist/22826223" target="_blank" title="Tidal">Tidal</a> / <a class="link" href="https://music.amazon.com/artists/B08RJWNQ5J/derek-torsani" target="_blank" title="Amazon Music">Amazon Music</a> / <a class="link" href="https://derektorsani.bandcamp.com/" target="_blank" title="Bandcamp">Bandcamp</a> / <a class="link" href="https://soundcloud.com/derektorsani" target="_blank" title="SoundCloud">SoundCloud</a></p>
-    <div class="spacer-2"></div>
+    <!-- <div class="spacer-2"></div>
     <p>Previous projects:</p>
     <p>Crank Cartel (Gogo) - Bass</p>
     <p>Sweet Teej & The Shuffle (Beach Rock) - Bass</p>
     <p>Multiple Church's (Worship & Praise) - Drums, Bass, Guitar</p>
     <p>Rudder North (Folk) - Guitar, Percussion, Xylophone</p>
-    <p>For Better For Worse (Post Hardcore) - Electric Guitar</p>
+    <p>For Better For Worse (Post Hardcore) - Electric Guitar</p> -->
     <div class="spacer-8"></div>
 
-    <h5>Design —</h5>
-    <div class="spacer-1"></div>
-    <p>Systems and product designer currently building design systems at <a class="link" href="https://gusto.com/" target="_blank" title="Gusto">Gusto</a>.</p>
-    <div class="spacer-2"></div>
-    <p>Other projects:</p>
-    <p><a class="link" href="https://soundcolorproject.com/" target="_blank" title="Sound Color Project">Sound Color Project</a> - web experiment exploring the relationships between audible and visual spectrums using light, color, and texture.</p>
-    <p><a class="link" href="https://halfdollar.org/" target="_blank" title="Halfdollar">Halfdollar</a> - free, collaborative and customizable budgeting template built in Airtable.</p>
-    <p><a class="link" href="https://cmbmn.com/dt" target="_blank" title="Call Me By My Name">Call Me By My Name</a> - profile page for people to proclaim their name pronunciation, personal pronouns, personal identities, topic interests, and cause support.</p>
-    <p><a class="link" href="https://weiigh.com/" target="_blank" title="Weiigh">Weiigh</a> - tool to help make choices based on what’s important to you and how the factors in your decisions weigh against one another.</p>
-    <div class="spacer-8"></div>
-
-    <h5>Volunteer —</h5>
+    <h3>Volunteer —</h3>
     <div class="spacer-1"></div>
     <p>With the gift of privilege comes the responsibility to use it to take care of others. I'm fortunate to be able to do this through giving of my time and resources.</p>
     <div class="spacer-2"></div>
-    <p>Efforts:</p>
-    <p>Helping folx obtain essential life documents with <a class="link" href="https://foundryumc.org/mercy" target="_blank" title="Imago Dei">Imago Dei</a>.</p>
-    <p>Bridging the gap between nonprofits and givers by volunteering with <a class="link" href="https://every.org" target="_blank" title="Every.org">Every.org</a>.</p>
-    <p>Connecting with people on <a class="link" href="https://superpeer.com/dt" target="_blank" title="Superpeer">Superpeer</a>, <a class="link" href="https://adplist.org/mentors/derek-torsani" target="_blank" title="ADP List">ADP List</a>, and <a class="link" href="https://www.outofofficehours.com/" target="_blank" title="Out of Office Hours">Out of Office Hours</a>.</p>
-    <div class="spacer-8"></div>
-
-    <h5>Engagements —</h5>
-    <div class="spacer-1"></div>
-    <p>I'm thankful to have been able to share my work to many different people.</p>
+    <h4>Efforts:</h4>
+    <p><a class="link" href="https://foundryumc.org/mercy" target="_blank" title="Imago Dei">Imago Dei</a> - helping folx obtain essential life documents.</p>
+    <p><a class="link" href="https://every.org" target="_blank" title="Every.org">Every.org</a> - bridging the gap between nonprofits and givers by volunteering.</p>
+    <p><a class="link" href="https://adplist.org/mentors/derek-torsani" target="_blank" title="ADP List">ADP List</a> - design mentoring.</p>
     <div class="spacer-2"></div>
-    <p>Features:</p>
-    <p>Documentation Resource Highlight, Figma Schema, 2021</p>
-    <p>Inside Design Systems Panel Discussion, Design Systems Community, 2021</p>
-    <p>Tools and Approaches for Design System Teams, Friends of Figma Lviv, 2021</p>
-    <p>Sound Color Project, Sound Scene & Hirshhorn, 2020</p>
-    <p>Designing Systems with Others, NOVA UX, 2019</p>
-    <p>Animating SVG, Hackital, 2017</p>
-    <p>Design Disrupters Representative, Washington, DC, 2016</p>
-    <p>Humor in Design, Maryland Institute College of Art, 2011</p>
+    <h4>Causes:</h4>
+    <p><a href="https://www.every.org/racial-justice" target="_blank" title="Donate to causes supporting racial justice" class="link">Anti-Racisim</a> / <a href="https://www.every.org/racial-justice" target="_blank" title="Donate to causes supporting racial justice" class="link">Black Lives Matter</a> / <a href="https://www.every.org/indigenous-peoples" target="_blank" title="Donate to causes supporting indigenous peoples" class="link">This is Stolen Land</a> / <a href="https://www.every.org/lgbt" target="_blank" title="Donate to causes supporting the LGBTQ+ community" class="link">Love is Love</a> / <a href="https://www.every.org/search?q=immigration" target="_blank" title="Donate to causes supporting immigration" class="link">No Human is Illegal</a> / <a href="https://www.every.org/humans" target="_blank" title="Donate to causes supporting human rights" class="link">Hate Has No Home Here</a> / <a href="https://www.every.org/research" target="_blank" title="Donate to causes supporting scientific research" class="link">Science is Real</a> / <a href="https://www.every.org/environment" target="_blank" title="Donate to causes supporting environmental justice" class="link">Environmental Justice</a> / <a href="https://www.every.org/animals" target="_blank" title="Donate to causes supporting animal rights" class="link">Animal Rights</a></p>
     <div class="spacer-8"></div>
 
-    <h5>Elsewhere —</h5>
+    <h3>Contributions —</h3>
     <div class="spacer-1"></div>
-    <p><a class="link" href="https://instagram.com/derektorsani" target="_blank" title="Instagram">Instagram</a> / <a class="link" href="https://dribbble.com/dmtors" target="_blank" title="Dribbble">Dribbble</a> / <a class="link" href="https://medium.com/@dmtors" target="_blank" title="Medium">Medium</a> / <a class="link" href="https://twitter.com/dmtors" target="_blank" title="Twitter">Twitter</a> / <a class="link" href="https://www.linkedin.com/in/derektorsani/" target="_blank" title="LinkedIn">LinkedIn</a> / <a class="link" href="https://airtable.com/shr52R50xdteom7wb/tblM1ZiWwie8II77v" target="_blank" title="Reading Queue">Reading Queue</a></p>
+    <p>I'm thankful to have been able to share my work with many different people.</p>
+    <div class="spacer-2"></div>
+    <h4>Features:</h4>
+    <p><a class="link" href="https://www.youtube.com/watch?v=71OOy811YWU" target="_blank" title="Inside Design Systems: Workbench, Design Systems Community Chapter Toronto, 2021">Inside Design Systems: Workbench</a>, Design Systems Community Chapter Toronto, 2021</p>
+    <p><a class="link" href="https://maecapozzi.com/newsletter/66/" target="_blank" title="So you want to build a design system? Mae Capozzi's Design Systems Newsletter, 2021">So you want to build a design system?</a>, Mae Capozzi's Design Systems Newsletter, 2021</p>
+    <p><a class="link" href="https://twitter.com/figmadesign/status/1446175053146509315?s=20" target="_blank" title="Documentation Resource Highlight, Figma Schema, 2021">Documentation Resource Highlight</a>, Figma Schema, 2021</p>
+    <p><a class="link" href="https://friends.figma.com/events/details/figma-lviv-presents-friends-of-figma-meetup-ukraine-2-design-systems/" target="_blank" title="Tools and Approaches for Design System Teams, Friends of Figma Lviv, 2021">Tools and Approaches for Design System Teams</a>, Friends of Figma Lviv, 2021</p>
+    <p><a class="link" href="https://www.facebook.com/watch/?v=1591243611049579" target="_blank" title="Sound Color Project, Sound Scene & Hirshhorn, 2020">Sound Color Project, Sound Scene & Hirshhorn, 2020</a> <span>(start video at 1:32:35)</span></p>
+    <p><a class="link" href="https://docs.google.com/presentation/d/1v8LVlFX_iwD7XZHiPSePbSvZ45JXDtcqNApqGtok0Z4/edit?usp=sharing" target="_blank" title="Designing Systems with Others, NOVA UX, 2019">Designing Systems with Others, NOVA UX, 2019</a> <span>(refer to notes for commentary)</span></p>
+    <p>Animating SVG, Hackital, 2017</p>
+    <!-- <p>Design Disrupters Representative, Washington, DC, 2016</p>
+    <p>Humor in Design, Maryland Institute College of Art, 2011</p> -->
     <div class="spacer-8"></div>
 
-    <h5>Archive —</h5>
+    <h3>Elsewhere —</h3>
+    <div class="spacer-1"></div>
+    <p><a class="link" href="https://twitter.com/dmtors" target="_blank" title="Twitter">Twitter</a> / <a class="link" href="https://medium.com/@dmtors" target="_blank" title="Medium">Medium</a> / <a class="link" href="https://www.linkedin.com/in/derektorsani/" target="_blank" title="LinkedIn">LinkedIn</a> / <a class="link" href="https://dribbble.com/dmtors" target="_blank" title="Dribbble">Dribbble</a> / <a class="link" href="https://instagram.com/derektorsani" target="_blank" title="Instagram">Instagram</a> / <a class="link" href="https://unsplash.com/@dmtors" target="_blank" title="Unsplash">Unsplash</a></p>
+    <div class="spacer-8"></div>
+
+    <h3>Archive —</h3>
     <div class="spacer-1"></div>
     <p><a class="link" href="archive/v20.2.0/index.html" target="_blank" title="Version 20.2.0">v20.2.0</a> / <a class="link" href="archive/v20.1.0/index.html" target="_blank" title="Version 20.1.0">v20.1.0</a> / <a class="link" href="archive/v20.0.0/index.html" target="_blank" title="Version 20.0.0">v20.0.0</a> / <a class="link" href="archive/v19.0.0/index.html" target="_blank" title="Version 19.0.0">v19.0.0</a> / <a class="link" href="archive/v18.1.0/index.html" target="_blank" title="Version 18.1.0">v18.1.0</a> / <a class="link" href="archive/v18.0.0/index.html" target="_blank" title="Version 18.0.0">v18.0.0</a> / <a class="link" href="archive/v17.2.0/index.html" target="_blank" title="Version 17.2.0">v17.2.0</a> / <a class="link" href="archive/v17.1.0/index.html" target="_blank" title="Version 17.1.0">v17.1.0</a> / <a class="link" href="archive/v17.0.0/index.html" target="_blank" title="Version 17.0.0">v17.0.0</a></p>
     <div class="spacer-8"></div>
