--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
     <p><a class="link" href="https://maecapozzi.com/newsletter/66/" target="_blank" title="So you want to build a design system? Mae Capozzi's Design Systems Newsletter, 2021">So you want to build a design system?</a>, Mae Capozzi's Design Systems Newsletter, 2021</p>
     <p><a class="link" href="https://twitter.com/figmadesign/status/1446175053146509315?s=20" target="_blank" title="Documentation Resource Highlight, Figma Schema, 2021">Documentation Resource Highlight</a>, Figma Schema, 2021</p>
     <p><a class="link" href="https://friends.figma.com/events/details/figma-lviv-presents-friends-of-figma-meetup-ukraine-2-design-systems/" target="_blank" title="Tools and Approaches for Design System Teams, Friends of Figma Lviv, 2021">Tools and Approaches for Design System Teams</a>, Friends of Figma Lviv, 2021</p>
-    <p><a class="link" href="https://www.facebook.com/watch/?v=1591243611049579" target="_blank" title="Sound Color Project, Sound Scene & Hirshhorn, 2020">Sound Color Project, Sound Scene & Hirshhorn, 2020</a> <span>(start video at 1:32:35)</span></p>
-    <p><a class="link" href="https://docs.google.com/presentation/d/1v8LVlFX_iwD7XZHiPSePbSvZ45JXDtcqNApqGtok0Z4/edit?usp=sharing" target="_blank" title="Designing Systems with Others, NOVA UX, 2019">Designing Systems with Others, NOVA UX, 2019</a> <span>(refer to notes for commentary)</span></p>
+    <p><a class="link" href="https://www.facebook.com/watch/?v=1591243611049579" target="_blank" title="Sound Color Project, Sound Scene & Hirshhorn, 2020">Sound Color Project</a>, Sound Scene & Hirshhorn, 2020 <span>(start video at 1:32:35)</span></p>
+    <p><a class="link" href="https://docs.google.com/presentation/d/1v8LVlFX_iwD7XZHiPSePbSvZ45JXDtcqNApqGtok0Z4/edit?usp=sharing" target="_blank" title="Designing Systems with Others, NOVA UX, 2019">Designing Systems with Others</a>, NOVA UX, 2019 <span>(refer to notes for commentary)</span></p>
     <p>Animating SVG, Hackital, 2017</p>
     <!-- <p>Design Disrupters Representative, Washington, DC, 2016</p>
     <p>Humor in Design, Maryland Institute College of Art, 2011</p> -->
