--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
     </div> -->
 
-    <img id="profile" src="images/favicon.png" alt="Photograph of a person with a large jacket on standing in front of a sky backdrop. It looks cold and feels windy."/>
+    <img id="profile" src="images/favicon.png" alt="Photograph of a person with a large jacket on standing in front of a sky backdrop. It appears cold and feels windy."/>
 
     <div class="spacer-8"></div>
     <h1>Derek Torsani</h1>
@@ -46,11 +46,9 @@
     <h3>Personal principles —</h3>
     <div class="spacer-1"></div>
     <ul>
-        <li>be kind</li>
-        <li>listen</li>
-        <li>consider others</li>
-        <li>give more</li>
-        <li>practice makes progress</li>
+        <li>kindness</li>
+        <li>inclusion</li>
+        <li>altruism</li>
     </ul>
     <div class="spacer-4"></div>
 
@@ -65,6 +63,7 @@
     <p>Previously designed systems at <a class="link-secondary" href="https://workbench.gusto.com/" target="_blank" title="Gusto">Gusto</a>, <a class="link-secondary" href="https://design.oracle.com/" target="_blank" title="Oracle">Oracle</a>, and <a class="link-secondary" href="https://medium.com/@dmtors/signals-b456ab01b387" target="_blank" title="Alarm.com">Alarm.com</a>.</p>
     <div class="spacer-2"></div>
     <h4>Projects:</h4>
+    <p><a class="link" href="/neighborly" target="_blank" title="Neighborly">Neighborly</a> - design systems consulting.</p>
     <p><a class="link" href="https://soundcolorproject.com/" target="_blank" title="Sound Color Project">Sound Color Project</a> - audible to visual spectrum translation.</p>
     <p><a class="link" href="https://halfdollar.org/" target="_blank" title="Halfdollar">Halfdollar</a> - collaborative and customizable budgeting.</p>
     <p><a class="link" href="https://weiigh.com/" target="_blank" title="Weiigh">Weiigh</a> - calculated decision making.</p>
@@ -103,6 +102,7 @@
     <p>I'm thankful to have been able to share my work with many different people.</p>
     <div class="spacer-2"></div>
     <h4>Features:</h4>
+    <p><a class="link" href="" target="_blank" title="ADPList Design Systems Group Session, 2022">Design Systems Group Session</a>, ADPList, 2022</p>
     <p><a class="link" href="https://www.youtube.com/watch?v=71OOy811YWU" target="_blank" title="Inside Design Systems: Workbench, Design Systems Community Chapter Toronto, 2021">Inside Design Systems: Workbench</a>, Design Systems Community Chapter Toronto, 2021</p>
     <p><a class="link" href="https://maecapozzi.com/newsletter/66/" target="_blank" title="So you want to build a design system? Mae Capozzi's Design Systems Newsletter, 2021">So you want to build a design system?</a>, Mae Capozzi's Design Systems Newsletter, 2021</p>
     <p><a class="link" href="https://twitter.com/figmadesign/status/1446175053146509315?s=20" target="_blank" title="Documentation Resource Highlight, Figma Schema, 2021">Documentation Resource Highlight</a>, Figma Schema, 2021</p>
