--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <p>Previously designed systems at <a class="link-secondary" href="https://workbench.gusto.com/" target="_blank" title="Gusto">Gusto</a>, <a class="link-secondary" href="https://design.oracle.com/" target="_blank" title="Oracle">Oracle</a>, and <a class="link-secondary" href="https://medium.com/@dmtors/signals-b456ab01b387" target="_blank" title="Alarm.com">Alarm.com</a>.</p>
     <div class="spacer-2"></div>
     <h4>Projects:</h4>
-    <p><a class="link" href="/neighborly" target="_blank" title="Neighborly">Neighborly</a> - design systems consulting.</p>
+    <!-- <p><a class="link" href="/neighborly" target="_blank" title="Neighborly">Neighborly</a> - design systems consulting.</p> -->
     <p><a class="link" href="https://soundcolorproject.com/" target="_blank" title="Sound Color Project">Sound Color Project</a> - audible to visual spectrum translation.</p>
     <p><a class="link" href="https://halfdollar.org/" target="_blank" title="Halfdollar">Halfdollar</a> - collaborative and customizable budgeting.</p>
     <p><a class="link" href="https://weiigh.com/" target="_blank" title="Weiigh">Weiigh</a> - calculated decision making.</p>
