--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <p>I'm thankful to have been able to share my work with many different people.</p>
     <div class="spacer-2"></div>
     <h4>Features:</h4>
-    <p><a class="link" href="" target="_blank" title="ADPList Design Systems Group Session, 2022">Design Systems Group Session</a>, ADPList, 2022</p>
+    <p><a class="link" href="https://youtu.be/e7fw3K-PIHs" target="_blank" title="ADPList Design Systems Group Session, 2022">Design Systems Group Session</a>, ADPList, 2022</p>
     <p><a class="link" href="https://www.youtube.com/watch?v=71OOy811YWU" target="_blank" title="Inside Design Systems: Workbench, Design Systems Community Chapter Toronto, 2021">Inside Design Systems: Workbench</a>, Design Systems Community Chapter Toronto, 2021</p>
     <p><a class="link" href="https://maecapozzi.com/newsletter/66/" target="_blank" title="So you want to build a design system? Mae Capozzi's Design Systems Newsletter, 2021">So you want to build a design system?</a>, Mae Capozzi's Design Systems Newsletter, 2021</p>
     <p><a class="link" href="https://twitter.com/figmadesign/status/1446175053146509315?s=20" target="_blank" title="Documentation Resource Highlight, Figma Schema, 2021">Documentation Resource Highlight</a>, Figma Schema, 2021</p>
