--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <div class="spacer-8"></div>
     <h1>Derek Torsani</h1>
-    <h2>— designer and musician in Baltimore, Maryland.</h2>
+    <h2>— multi-instrumentalist and product designer focused on accessibility and design systems.</h2>
     <div class="spacer-8"></div>
 
     <h3>Personal principles —</h3>
