--- a/index.html
+++ b/index.html
@@ -50,14 +50,18 @@
         <h3><b>Volunteer</b></h3>
         <div class="spacer-1"></div>
         <p><a href="https://foundryumc.org/mercy" target="_blank" title="Imago Dei" aria-label="Visit Imago Dei in a new tab.">Imago Dei</a>, helping folx obtain essential life documents.</p>
+        <div class="spacer-1"></div>
         <p><a href="https://every.org" target="_blank" title="Every.org" aria-label="Visit Every.org in a new tab.">Every.org</a>, bridging the gap between nonprofits and givers by volunteering.</p>
+        <div class="spacer-1"></div>
         <p><a href="https://adplist.org/mentors/derek-torsani" target="_blank" title="ADP List" aria-label="Visit ADP List in a new tab.">ADP List</a>, design mentoring.</p>
         <div class="spacer-8"></div>
 
         <h3><b>Projects</b></h3>
         <div class="spacer-1"></div>
         <p><a href="https://soundcolorproject.com/" target="_blank" title="Sound Color Project" aria-label="Visit Sound Color Project in a new tab.">Sound Color Project</a>, audible to visual spectrum translation.</p>
+        <div class="spacer-1"></div>
         <p><a href="https://halfdollar.org/" target="_blank" title="Halfdollar" aria-label="Visit Halfdollar in a new tab.">Halfdollar</a>, collaborative and customizable budgeting.</p>
+        <div class="spacer-1"></div>
         <p><a href="https://weiigh.com/" target="_blank" title="Weiigh" aria-label="Visit Weiigh in a new tab.">Weiigh</a>, calculated decision making.</p>
     </section>
 
