--- a/index.html
+++ b/index.html
@@ -51,13 +51,15 @@
         <div class="spacer-1"></div>
         <p><a href="https://foundryumc.org/mercy" target="_blank" title="Imago Dei" aria-label="Visit Imago Dei in a new tab.">Imago Dei</a>, helping folx obtain essential life documents.</p>
         <div class="spacer-1"></div>
-        <p><a href="https://every.org" target="_blank" title="Every.org" aria-label="Visit Every.org in a new tab.">Every.org</a>, bridging the gap between nonprofits and givers by volunteering.</p>
+        <p><a href="https://every.org" target="_blank" title="Every.org" aria-label="Visit Every.org in a new tab.">Every.org</a>, bridging the gap between nonprofits and givers.</p>
         <div class="spacer-1"></div>
         <p><a href="https://adplist.org/mentors/derek-torsani" target="_blank" title="ADP List" aria-label="Visit ADP List in a new tab.">ADP List</a>, design mentoring.</p>
         <div class="spacer-8"></div>
+    </section>
 
+    <section id="projects">
         <h3><b>Projects</b></h3>
-        <div class="spacer-1"></div>
+        <div class="spacer-8"></div>
         <p><a href="https://soundcolorproject.com/" target="_blank" title="Sound Color Project" aria-label="Visit Sound Color Project in a new tab.">Sound Color Project</a>, audible to visual spectrum translation.</p>
         <div class="spacer-1"></div>
         <p><a href="https://halfdollar.org/" target="_blank" title="Halfdollar" aria-label="Visit Halfdollar in a new tab.">Halfdollar</a>, collaborative and customizable budgeting.</p>
@@ -82,8 +84,8 @@
             <h4><b>Tsimtsum</b>, Alternative</h4>
             <div class="spacer-1"></div>
             <p>2020–present</p>
-            <!-- <div class="spacer-1"></div>
-            <a href="https://open.spotify.com/artist/73mWdu0S5IfY7ReJ3V7JFv" target="_blank" title="Spotify" aria-label="Listen to Tsimtsum on Spotify in a new tab.">Spotify</a> / <a href="https://music.apple.com/us/artist/derek-torsani/1546729491" target="_blank" title="Apple Music" aria-label="Listen to Tsimtsum on Apple Music in a new tab.">Apple Music</a> / <a href="https://listen.tidal.com/artist/22826223" target="_blank" title="Tidal" aria-label="Listen to Tsimtsum on Tidal in a new tab.">Tidal</a> / <a href="https://music.youtube.com/channel/UCu9L5oPF9YQJHhDzPUTdE-Q?feature=share" target="_blank" title="YouTube Music" aria-label="Listen to Tsimtsum on YouTube Music in a new tab.">YouTube Music</a> / <a href="https://music.amazon.com/artists/B08RJWNQ5J/derek-torsani" target="_blank" title="Amazon Music" aria-label="Listen to Tsimtsum on Amazon Music in a new tab.">Amazon Music</a> / <a href="https://derektorsani.bandcamp.com/" target="_blank" title="Bandcamp" aria-label="Listen to Tsimtsum on Bandcamp in a new tab.">Bandcamp</a> -->
+            <div class="spacer-1"></div>
+            <a href="https://open.spotify.com/artist/2c7kxUAJIlQLFSZtrNFd3V?si=vllzib5KRrGyJTgZJAaZ2w" target="_blank" title="Spotify" aria-label="Listen to Tsimtsum on Spotify in a new tab.">Spotify</a> / <a href="https://music.apple.com/us/album/g-host-single/1650515348" target="_blank" title="Apple Music" aria-label="Listen to Tsimtsum on Apple Music in a new tab.">Apple Music</a> / <a href="https://tidal.com/browse/album/255063779" target="_blank" title="Tidal" aria-label="Listen to Tsimtsum on Tidal in a new tab.">Tidal</a> / <a href="https://music.youtube.com/playlist?list=OLAK5uy_mkxZiXPssRAlpf43WR97ezRSfaKh-5kYc&feature=share" target="_blank" title="YouTube Music" aria-label="Listen to Tsimtsum on YouTube Music in a new tab.">YouTube Music</a> / <a href="https://music.amazon.com/albums/B0BJPFZJNH" target="_blank" title="Amazon Music" aria-label="Listen to Tsimtsum on Amazon Music in a new tab.">Amazon Music</a>
             <div class="spacer-8"></div>
 
             <h4><b>Intermission</b>, Contemporary Rnb</h4>
@@ -105,12 +107,23 @@
             <p>2005–2008</p>
             <div class="spacer-1"></div>
             <a href="https://open.spotify.com/artist/6jlyi0WHscLeiLiRrEF28t?si=qo3iX_xZS3ysp0XjcrW3zg" target="_blank" title="Spotify" aria-label="Listen to For Better For Worse on Spotify in a new tab.">Spotify</a> / <a href="https://music.apple.com/us/artist/for-better-for-worse/1593464182" target="_blank" title="Apple Music" aria-label="Listen to For Better For Worse on Apple Music in a new tab.">Apple Music</a> / <a href="https://tidal.com/browse/artist/29137617" target="_blank" title="Tidal" aria-label="Listen to For Better For Worse on Tidal in a new tab.">Tidal</a> / <a href="https://music.youtube.com/channel/UCvF9V36V9A55NmsqqqpBBpw" target="_blank" title="YouTube Music" aria-label="Listen to For Better For Worse on YouTube Music in a new tab.">YouTube Music</a> / <a href="https://music.amazon.com/artists/B07FH84JF6/for-better-for-worse" target="_blank" title="Amazon Music" aria-label="Listen to For Better For Worse on Amazon Music in a new tab.">Amazon Music</a>
+            <div class="spacer-8"></div>
+
+            <p>Features:</p>
+            <div class="spacer-8"></div>
+            <h4><b>PRJCT UNTLD</b>, Rnb</h4>
+            <div class="spacer-1"></div>
+            <p><a href="https://open.spotify.com/track/2X7XiwO59hfczJug0RlGri?si=597348102ee4492a" target="_blank" title="Spotify" aria-label="Listen to Home Cooking by Project Untitled on Spotify in a new tab.">Home Cooking</a>, Bass</p>
+            <div class="spacer-4"></div>
+            <h4><b>Sweet Teej</b>, Beach Rock</h4>
+            <div class="spacer-1"></div>
+            <p><a href="https://open.spotify.com/artist/1Y9hkLB1oyYl0mvpNVdZfO?si=t7260neeSIqQWzk_o6kfBg" target="_blank" title="Spotify" aria-label="Listen to Good Ole Days by Sweet Teej on Spotify in a new tab.">Good Ole Days</a>, Bass</p>
         </div>
 
         <div class="half">
             <h4><b>Designer</b></h4>
             <div class="spacer-8"></div>
-            <p>Accessibility, systems, product and motion designer.</p>
+            <p>Accessibility, systems, and product designer.</p>
             <div class="spacer-8"></div>
 
             <h4><b>Plaid</b>, accessibility, design systems</h4>
@@ -146,6 +159,9 @@
             <p>2015–2017</p>
             <div class="spacer-1"></div>
             <a href="https://samcart.com" target="_blank" title="samcart.com" aria-label="Visit SamCart in a new tab.">samcart.com</a>
+            <div class="spacer-8"></div>
+
+            <p>Further previous experience includes graphic design, web design, filmmaking, and 2D animation.</p>
             <div class="spacer-8"></div>
 
             <a href="derektorsani-resume.pdf" target="_blank" title="Résumé" aria-label="Open résumé in a new tab.">Résumé</a>
