--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <div class="spacer-5"></div>
                 <h3>Gusto</h3>
                 <div class="spacer-1"></div>
-                <h4><b>DataField</b>, 2022</h4>
+                <h4><b>DateField</b>, 2022</h4>
                 <div class="spacer-1"></div>
                 <p><small>Role: product design</small></p>
                 <div class="spacer-4"></div>
