added gusto dashboard concept

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <h2><b>Product Design</b></h2>
                 <i><small>(scroll → for more)</small></i>
             </div>
-            <!-- <div class="project">
+            <div class="project">
                 <img src="images/portfolio/product-design/gusto.png" alt="A software interface with a menu showing different filters and options for a color visualizer."/>
                 <div class="spacer-5"></div>
                 <h3>Gusto</h3>
@@ -159,7 +159,7 @@
                 <p><small>Redesign concept for the Gusto Dashboard.</small></p>
                 <div class="spacer-1"></div>
                 <p><small>Role: product design</small></p>
-            </div> -->
+            </div>
             <div class="project">
                 <img src="images/portfolio/product-design/sound-color-project.png" alt="A software interface with a menu showing different filters and options for a color visualizer."/>
                 <div class="spacer-5"></div>
