--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div class="spacer-1"></div>
                 <p><small>Role: pattern design, product design</small></p>
                 <div class="spacer-4"></div>
-                <a class="link-disabled" title="Plaid Data Visualization Article" aria-label="Read more about accessible data visualization for Plaid in a new tab.">Read about accessible data visualization at Plaid (coming soon!)</a>
+                <a href="https://medium.com/plaid-design/visually-accessible-data-visualization-ff884121479b" title="Plaid Data Visualization Article" aria-label="Read more about accessible data visualization for Plaid in a new tab.">Read about accessible data visualization at Plaid</a>
             </div>
             <div class="project">
                 <img src="images/portfolio/systems-design/datefield.jpg" alt="A software interface displaying a datepicker."/>
