--- a/index.html
+++ b/index.html
@@ -622,6 +622,8 @@
         <section>
             <h2><b>Engagements</b></h2>
             <div class="spacer-2"></div>
+            <p>Speaker, Murray Hill Middle School Career Day, 2023</p>
+            <div class="spacer-3"></div>
             <p>Speaker, Experience Design Summit, 2022</p>
             <div class="spacer-3"></div>
             <p>Host, Plaid Accessibility Panel, 2022</p>
