--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <h2>dad, partner, musician, designer, artist, friend</h2>
             <div class="spacer-8"></div>
 
-            <h2>Seeking a world of kindness, consideration, and inclusion.</h2>
+            <h2>Cultivating a world of kindness, consideration, and inclusion.</h2>
         </section>
 
         <section>
