--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="styles/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Inter:400,600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Inter:400,500,600&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <title>Derek Torsani</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -24,7 +24,7 @@
 <div>
     <header>
         <section>
-            <img id="profile" src="images/favicon.png" alt="Photograph of Derek Torsani with a large jacket on standing in front of a sky backdrop. It appears cold and feels windy."/>
+            <a id="profile-link" href="images/dmtors.gif" target="_blank"><div id="profile" alt="Photograph of Derek Torsani with a large jacket on standing in front of a sky backdrop. It appears cold and feels windy."></div></a>
             <div class="spacer-8"></div>
 
             <h1><b>Derek Torsani</b></h1>
@@ -609,7 +609,7 @@
             <div class="spacer-3"></div>
             <p><a href="https://medium.com/@dmtors/signals-b456ab01b387" target="_blank" title="Signals on Medium" aria-label="Open Signals on Medium in a new tab.">Signals (Design System for Alarm.com)</a>, 2020</p>
             <div class="spacer-3"></div>
-            <p><a href="https://medium.com/@dmtors/vapor-redwood-6ba16daaae86" target="_blank" title="Vapor/Redwood on Medium" aria-label="Open Vapor/Redwood on Medium in a new tab.">Vapor/Redwood (Design System for Oracle Data Cloud)</a>, 2020</p>
+            <p><a href="https://medium.com/@dmtors/vapor-redwood-6ba16daaae86" target="_blank" title="Vapor/Redwood on Medium" aria-label="Open Vapor/Redwood on Medium in a new tab.">Vapor/Redwood (Design System for Oracle)</a>, 2020</p>
             <div class="spacer-3"></div>
             <p><a href="https://medium.com/@dmtors/autra-automatic-content-translation-9763776117c8" target="_blank" title="Autra - Automatic Content Translation on Medium" aria-label="Open Autra - Automatic Content Translation on Medium in a new tab.">Autra - Automatic Content Translation</a>, 2018</p>
             <div class="spacer-3"></div>
