new website fix

--- a/discography.html
+++ b/discography.html
@@ -27,7 +27,7 @@
     <a href="index.html#bottom" title="return" aria-label="Navigate back to the previous page.">return</a>
     <h1>Discography</h1>
     <section>
-        <iframe src="https://open.spotify.com/embed/album/3AuUvPQDc22u7VKZSEk7Mf?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/3AuUvPQDc22u7VKZSEk7Mf?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </section>
     <p><i>Intermission, New Life</i>, 2022</p>
     <p style="margin-top:-14px;">instrumentation, composition, production</p>
@@ -40,7 +40,7 @@
     </p>
     <p></p>
     <section>
-        <iframe src="https://open.spotify.com/embed/album/6VKodQ3C1rmme8jjj9ckpJ?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/6VKodQ3C1rmme8jjj9ckpJ?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </section>
     <p><i>PRJCT UNTLD, Home Cooking</i>, 2022</p>
     <p style="margin-top:-14px;">bass</p>
@@ -53,7 +53,7 @@
     </p>
     <p></p>
     <section>
-        <iframe src="https://open.spotify.com/embed/album/6wuFeJtukTHBtHYihk2TlA?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/6wuFeJtukTHBtHYihk2TlA?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </section>
     <p><i>Derek Torsani, Say Their Names</i>, 2021</p>
     <p style="margin-top:-14px;">keys, piano, bass, composition, production</p>
@@ -68,7 +68,7 @@
     </p>
     <p></p>
     <section>
-        <iframe src="https://open.spotify.com/embed/album/3lJKPjmktLZBaoZF442UMI?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/3lJKPjmktLZBaoZF442UMI?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </section>
     <p><i>Tsimtsum, g(host)</i>, 2021</p>
     <p style="margin-top:-14px;">instrumentation, composition, production</p>
@@ -81,7 +81,7 @@
     </p>
     <p></p>
     <section>
-        <iframe src="https://open.spotify.com/embed/album/7BuA46PPxJrpsa9joDpc4i?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/7BuA46PPxJrpsa9joDpc4i?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </section>
     <p><i>Derek Torsani, Highland (Live)</i>, 2021</p>
     <p style="margin-top:-14px;">keys, bass, samples, composition, production</p>
@@ -94,7 +94,7 @@
     </p>
     <p></p>
     <section>
-        <iframe src="https://open.spotify.com/embed/album/47JM2Shp4fAK7IUg3SZDHj?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/47JM2Shp4fAK7IUg3SZDHj?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </section>
     <p><i>Derek Torsani, Seeds</i>, 2021</p>
     <p style="margin-top:-14px;">keys, piano, bass, drones, composition, production</p>
@@ -109,7 +109,7 @@
     </p>
     <p></p>
     <section>
-        <iframe src="https://open.spotify.com/embed/album/0Y02O6KhYQ8SDFPpyMTmrI?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/0Y02O6KhYQ8SDFPpyMTmrI?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </section>
     <p><i>Rudder North, Rudder North</i>, 2012</p>
     <p style="margin-top:-14px;">acoustic guitar, percussion, harmonica, composition, production</p>
@@ -123,7 +123,7 @@
     </p>
     <p></p>
     <section>
-        <iframe src="https://open.spotify.com/embed/album/7IZvKpg9O1oSHr9Ll0gJLl?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/7IZvKpg9O1oSHr9Ll0gJLl?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </section>
     <p><i>Rudder North, Redwoods</i>, 2010</p>
     <p style="margin-top:-14px;">acoustic guitar, mandolin, percussion, harmonica, composition, production</p>
@@ -137,7 +137,7 @@
     </p>
     <p></p>
     <section>
-        <iframe src="https://open.spotify.com/embed/album/1dmW6gKaUtOU6KVYh56vwP?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/1dmW6gKaUtOU6KVYh56vwP?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </section>
     <p><i>For Better For Worse, I Remember</i>, 2008</p>
     <p style="margin-top:-14px;">electric guitar, composition</p>
@@ -150,7 +150,7 @@
     </p>
     <p></p>
     <section>
-        <iframe src="https://open.spotify.com/embed/album/3wHymb8OF3Zku6doEmTQVu?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/3wHymb8OF3Zku6doEmTQVu?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     </section>
     <p><i>For Better For Worse, Their Eyes</i>, 2008</p>
     <p style="margin-top:-14px;">electric guitar, composition</p>
